# ip-ranges-api

./: Cargo.toml  README.md  render.yaml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: build.yaml
e2e/: aws.sh  azure.sh  cloudflare.sh  digitalocean.sh  fastly.sh  gcp.sh  linode.sh  oracle.sh  wait_for_health.sh
src/: api.rs  cache.rs  main.rs
src/fetchers/: aws.rs  azure.rs  cloudflare.rs  digitalocean.rs  fastly.rs  gcp.rs  linode.rs  mod.rs  oracle.rs
src/handlers/: aws.rs  azure.rs  cloudflare.rs  digitalocean.rs  fastly.rs  gcp.rs  health.rs  linode.rs  mod.rs  oracle.rs
src/integrations/: aws.rs  mod.rs
