[package]
name = "ip-ranges-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11" }
lazy_static = "1.4"
async-trait = "0.1"
sha2 = "0.9.3"
hex = "0.4.3"
dashmap = "5.1.0"
tracing = "0.1.27"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4"] }